<resources>
    <string name="app_name">MyFigureCollection</string>
    <string name="content_description">Image</string>
    <string name="title_activity_figures">FiguresActivity</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_login">Login</string>
    <string name="menu_title_logout">Sign Out</string>
    <string name="menu_title_mfc">My Figures Collection</string>
    <string name="menu_title_latest_pictures">Latest Pictures</string>
    <string name="menu_title_pod">Pictures of the day</string>
    <string name="menu_title_pow">Pictures of the week</string>
    <string name="menu_title_pom">Pictures of the month</string>
    <string name="menu_title_twitter">\@MFC on Twitter</string>
    <string name="navigation_view_header_title">MFC</string>
    <string name="title_activity_best_pictures">BestPicturesActivity</string>
    <string name="action_download">Download</string>
    <string name="title_activity_figure_detail">FigureDetailActivity</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_category">Category</string>
    <string name="label_author">Author</string>
    <string name="label_release_date">Release Date</string>
    <string name="label_price">Price</string>
    <string name="label_score">Score</string>
    <string name="label_wishability">Wishability</string>
    <string name="label_number_of_items">Items #</string>
    <string name="label_barcode">Barcode</string>
    <string name="label_resolution">Resolution</string>
    <string name="label_hits">Hit(s)</string>
    <string name="image_resolution_pattern">%1$s x %2$s</string>
    <string name="label_size">Size</string>
    <string name="label_file_extension">File Extension</string>
    <string name="not_available">N.A.</string>
    <string name="currency_symbol">¥</string>
    <string name="label_gallery_counter">%1$d of %2$d</string>
    <string name="title_activity_figure_gallery">FigureGalleryActivity</string>
    <string name="title_activity_embedded_twitter">EmbeddedTwitterActivity</string>
    <string name="settings_label_nsfw_title">Enable NSFW</string>
    <string name="settings_label_nsfw_subtitle">Show Not Safe for Work (NSFW) Content</string>
    <string name="settings_version">Version</string>
    <string name="button_title_signin">Login</string>
    <string name="button_signup">Don\'t have an account? <b>Sign up!</b></string>
    <string name="button_forgot_password">Forgot password?</string>
    <string name="menu_search_description">Name &amp; keywords </string>

    <!-- Error messages -->
    <string name="ordered_items_value">ordered</string>
    <string name="owned_items_value">owned</string>
    <string name="wished_items_value">wished</string>
    <string name="potd_items_value">pictures of the day</string>
    <string name="latest_items_value">latest pictures</string>
    <string name="title_error_no_items_in_list">Get to your %s items</string>
    <string name="message_error_no_owned_items_in_list">Items you own will show up here.</string>
    <string name="message_error_no_ordered_items_in_list">Items you have ordered will show up here.</string>
    <string name="message_error_no_wished_items_in_list">Items you wish will show up here.</string>
    <string name="title_error_loading_items">Sorry, I had trouble loading %s items. Tap to reload them.</string>
    <string name="title_error_loading_pictures">Sorry, I had trouble loading %s. Tap to reload them.</string>

</resources>
