<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/large_padding">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/small_margin"
        android:src="@drawable/ic_tsuko_login"
        tools:ignore="ContentDescription" />

    <ViewFlipper
        android:id="@+id/view_flipper_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_username"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextInputLayout.TextAppearance.ErrorText">

                <EditText
                    android:id="@+id/edit_text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edit_text_password"
                    tools:ignore="LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextInputLayout.TextAppearance.ErrorText"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white_opaque">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    tools:ignore="LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:background="@drawable/ripple_background"
                android:text="@string/button_title_signin"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_signup"
                style="@style/Button.Hyperlink"
                android:text="@string/button_signup" />

            <Button
                android:id="@+id/button_forgot_password"
                style="@style/Button.Hyperlink"
                android:text="@string/button_forgot_password" />

        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </ViewFlipper>


</LinearLayout>
